<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeeApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Email">Email address</string>
    <string name="Password">Password</string>
    <string name="Login">Log In</string>
    <string name="Signup">Sign Up</string>
    <string name="SignupLink"><u>Sign Up</u></string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Registration">Registration</string>
    <string name="FirstName">First name</string>
    <string name="LastName">Last name</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="AddLocation"><u>Add location</u></string>
    <string name="HealthCoordinator">I am a health coordinator</string>
    <string name="Search">Search:</string>
    <string name="SearchHint">Enter keyword(s)</string>
    <string name="diseaseimage">Disease Image</string>
    <string name="userdetails">USER DETAILS</string>
    <string name="username">Name:</string>
    <string name="usersurname">Surname:</string>
    <string name="useremail">Email:</string>
    <string name="profile">Profile</string>
    <string name="title_activity_disease_detail">Disease Details</string>	
    
</resources>
