<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/enterEmail"
        android:hint="@string/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="textEmailAddress" >
		<requestFocus />
	</EditText>
    
    <EditText
        android:id="@+id/enterPassword"
        android:hint="@string/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/signupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterEmail"
        android:layout_below="@+id/enterPassword"
        android:layout_marginTop="23dp"
        android:onClick="onSignupClicked"
        android:text="@string/SignupLink"
        android:textColor="@color/LinkBlue" />

    <Button
        android:id="@+id/loginButton"
        android:onClick="onLoginClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signupLink"
        android:layout_alignBottom="@+id/signupLink"
        android:layout_alignRight="@+id/enterEmail"
        android:text="@string/Login" />

</RelativeLayout>
